// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastUpdated renders the LastUpdated component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "width": "100%",
    }
  }
>
  <Link
    containerStyle={Object {}}
    href=""
    onPress={[Function]}
    style={Object {}}
  >
    <CentredText
      style={Object {}}
    >
      Last updated 11 hours ago
    </CentredText>
  </Link>
</View>
`;

exports[`LastUpdated renders the LastUpdated component loading 1`] = `""`;

exports[`LastUpdated shows error when studyspace info is stale 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "width": "100%",
    }
  }
>
  <Link
    containerStyle={Object {}}
    href=""
    onPress={[Function]}
    style={Object {}}
  >
    <CentredText
      style={Object {}}
    >
      Last updated 13 hours ago
    </CentredText>
  </Link>
</View>
`;
